(Fix) headers more contrast and more cool

--- a/_sass/post-preview.sass
+++ b/_sass/post-preview.sass
@@ -11,8 +11,8 @@
     color: $text__color_clickable
     margin-bottom: 0
     margin-left: -2rem
-    padding-left: 2rem
-    background-color: $table__color_head
+    padding: 0 .5rem 0 2rem
+    background-color: $table__color_hover
     border-radius: 3px
     &::before
       margin-left: -2.1rem
@@ -37,7 +37,6 @@
   .post-preview
     &__title
       display: inline-block
-      margin: .5rem
       font-size: $text__size_big_touchscreen
       &::before
         content: none
